[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/UI & misc/Controls.gd" type="Script" id=1]
[ext_resource path="res://scenes/UI & misc/Help.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/scroll_bar_theme.tres" type="Theme" id=3]
[ext_resource path="res://scenes/Comics/Outside/2.webp" type="Texture" id=4]
[ext_resource path="res://scenes/Comics/Outside/1.webp" type="Texture" id=5]
[ext_resource path="res://fonts/Menu_dynamicfont.tres" type="DynamicFont" id=8]
[ext_resource path="res://scenes/UI & misc/Notification.gd" type="Script" id=14]

[sub_resource type="Theme" id=1]

[node name="Controls" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.309804 )
margin_left = -236.0
margin_top = -69.0
margin_right = 1046.0
margin_bottom = 648.0
texture = ExtResource( 4 )

[node name="TextureRect2" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.298039 )
margin_left = 2.0
margin_top = 965.0
margin_right = 1284.0
margin_bottom = 1682.0
texture = ExtResource( 5 )

[node name="Help popup" type="Popup" parent="."]
margin_right = 1285.0
margin_bottom = 741.0
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" parent="Help popup" instance=ExtResource( 2 )]

[node name="CheckButton" type="CheckButton" parent="."]
visible = false
margin_left = 670.09
margin_top = 96.1085
margin_right = 746.09
margin_bottom = 136.108
theme = SubResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -254.0
margin_right = 254.0
margin_bottom = 573.0
theme = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 352.0
margin_bottom = 1131.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_right = 352.0
margin_bottom = 65.0
text = "


"

[node name="back" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 352.0
margin_bottom = 147.0
custom_fonts/font = ExtResource( 8 )
action_mode = 0
text = "Back"
flat = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 151.0
margin_right = 352.0
margin_bottom = 229.0

[node name="music" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_right = 236.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 8 )
toggle_mode = true
text = "music on/off"
flat = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="CheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_left = 240.0
margin_right = 264.0
margin_bottom = 78.0

[node name="debug" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 233.0
margin_right = 352.0
margin_bottom = 311.0
custom_fonts/font = ExtResource( 8 )
toggle_mode = true
shortcut_in_tooltip = false
text = "Debug "
flat = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="languague" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 315.0
margin_right = 352.0
margin_bottom = 393.0
custom_fonts/font = ExtResource( 8 )
toggle_mode = true
shortcut_in_tooltip = false
text = "languague"
flat = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="shuffle" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 397.0
margin_right = 352.0
margin_bottom = 475.0
custom_fonts/font = ExtResource( 8 )
toggle_mode = true
shortcut_in_tooltip = false
text = "Shuffle Music "
flat = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="github" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 479.0
margin_right = 352.0
margin_bottom = 557.0
custom_fonts/font = ExtResource( 8 )
toggle_mode = true
shortcut_in_tooltip = false
text = "Git Config"
flat = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="notifications" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 561.0
margin_right = 352.0
margin_bottom = 639.0
custom_fonts/font = ExtResource( 8 )
toggle_mode = true
shortcut_in_tooltip = false
text = "notifications"
flat = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="wallet" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 643.0
margin_right = 352.0
margin_bottom = 721.0
custom_fonts/font = ExtResource( 8 )
toggle_mode = true
shortcut_in_tooltip = false
text = "Wallet Config"
flat = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="CRT" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 725.0
margin_right = 352.0
margin_bottom = 803.0
custom_fonts/font = ExtResource( 8 )
toggle_mode = true
shortcut_in_tooltip = false
text = "CRT on off"
flat = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="help" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 807.0
margin_right = 352.0
margin_bottom = 885.0
custom_fonts/font = ExtResource( 8 )
text = "Hold to Show Help"
flat = true

[node name="change controller" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 889.0
margin_right = 352.0
margin_bottom = 967.0
custom_fonts/font = ExtResource( 8 )
toggle_mode = true
text = "Direction/controls"
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 971.0
margin_right = 352.0
margin_bottom = 1049.0

[node name="vibration" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
margin_right = 185.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 8 )
toggle_mode = true
text = "vibration"
flat = true

[node name="CheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 189.0
margin_right = 213.0
margin_bottom = 78.0

[node name="TextureButton" type="TextureButton" parent="ScrollContainer/VBoxContainer"]
visible = false
margin_top = 656.0
margin_right = 352.0
margin_bottom = 656.0
toggle_mode = true

[node name="HBoxContainer3" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 1053.0
margin_right = 352.0
margin_bottom = 1131.0

[node name="multiplayer" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_right = 217.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 8 )
toggle_mode = true
shortcut_in_tooltip = false
text = "online mmo"
flat = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[connection signal="pressed" from="ScrollContainer/VBoxContainer/back" to="." method="_on_Button_pressed"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/HBoxContainer2/music" to="." method="_on_music_toggled"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/debug" to="." method="_on_Debug_toggled"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/languague" to="." method="_on_languague_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/shuffle" to="." method="_on_Shuffle_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/github" to="." method="_on_github_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/notifications" to="." method="_on_notifications_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/wallet" to="." method="_on_wallet_pressed"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/CRT" to="." method="_on_CRT_toggled"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/help" to="." method="_on_Help_pressed"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/change controller" to="." method="_on_Direction_controls_toggled"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/HBoxContainer/vibration" to="." method="_on_vibration_toggled"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/HBoxContainer3/multiplayer" to="." method="_on_multiplayer_toggled"]
